# server

./: .env.local  .env.prod  .gitignore  Dockerfile  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
.github/workflows/: docker-image.yml  lint_and_test.yml
.nginx/: default.conf  localhost.crt
.nginx/nconf/: nginx.conf
auto_ml_flow/: __init__.py  asgi.py  celery_app.py  settings.py  urls.py  wsgi.py
auto_ml_flow/locale/ru/LC_MESSAGES/: django.po
core/: models.py  viewsets.py
core/locale/ru/LC_MESSAGES/: django.po
dataset/: models.py  urls.py  views.py
dataset/api/: serializers.py  urls.py  views.py
dataset/locale/ru/LC_MESSAGES/: django.po
dataset/migrations/: 0001_initial.py  0002_alter_datasetmodel_run.py
dataset/templates/dataset/: detail.html  list.html
experiment/: admin.py  forms.py  models.py  serializers.py  urls.py  views.py
experiment/api/: serializers.py  urls.py  views.py
experiment/locale/ru/LC_MESSAGES/: django.po
experiment/migrations/: 0001_initial.py  0002_runmodel_description.py  0002_runmodel_runmetricmodel.py  0003_runmodel_status_alter_runmodel_duration.py  0004_runmodel_traceback.py  0005_alter_runmodel_duration.py
experiment/templates/: index.html
experiment/templates/experiment/: detail.html  list.html  run_detail.html
experiment/templates/run/: detail.html
experiment/urls/: rest.py  templates.py
experiment/views/: rest.py  templates.py
locale/ru/LC_MESSAGES/: django.po
media/datasets/: iris_dataset.xlsx
meta_algo/: admin.py  apps.py  models.py  services.py  tasks.py  urls.py  views.py
meta_algo/api/: serializers.py  urls.py  views.py
meta_algo/locale/ru/LC_MESSAGES/: django.po
meta_algo/migrations/: 0001_initial.py
meta_algo/templates/models/: list.html
system/: admin.py  models.py  urls.py  views.py
system/api/: serializers.py  urls.py  views.py
system/locale/ru/LC_MESSAGES/: django.po
system/migrations/: 0001_initial.py
system/templates/system/: detail.html  list.html
templates/: base.html  index.html  pagination.html
templates/experiments/: detail.html  index.html
